--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -3,5 +3,8 @@
 	<div class="field">
 		<%= f.text_area :content, placeholder: "Compose new micropost..." %>
 	</div>
-	<%= f.submit "Post", class: "btn btn-large btn-primary" %>
+
+	<%= f.submit "Post", class: "btn btn-large btn-primary " %>
+  <p id="char_count"> </p>
+
 <% end %>
