Finish ch11 exercises

--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, @title) %>
 <div class="row">
+  
   <aside class="span4">
     <section>
-      <%= gravatar_for @user %>
-      <h1><%= @user.name %></h1>
-      <span><%= link_to "view my profile", @user %></span>
-      <span><b>Microposts:</b> <%= @user.microposts.count %></span>
+      <%= render 'shared/user_info' %>
     </section>
     <section>
       <%= render 'shared/stats' %>
+    </section>
+    <section>
       <% if @users.any? %>
         <div class="user_avatars">
           <% @users.each do |user| %>
@@ -18,6 +18,7 @@
       <% end %>
     </section>
   </aside>
+
   <div class="span8">
     <h3><%= @title %></h3>
     <% if @users.any? %>
@@ -27,4 +28,5 @@
       <%= will_paginate %>
     <% end %>
   </div>
+
 </div>
